--- a/MusicStorer/packages.config
+++ b/MusicStorer/packages.config
@@ -1,7 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="EntityFramework" version="6.0.0" targetFramework="net452" />
-  <package id="sqlite-net" version="1.0.8" targetFramework="net452" />
-  <package id="System.Data.SQLite.Linq" version="1.0.97.0" targetFramework="net452" />
+  <package id="NDatabase" version="3.8.0" targetFramework="net452" />
   <package id="TagLib.Portable" version="1.0.2" targetFramework="net452" />
 </packages>
