--- a/MusicStorer/MusicStorer.csproj
+++ b/MusicStorer/MusicStorer.csproj
@@ -50,6 +50,8 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="MusicInfo.cs" />
+    <Compile Include="MusicInfoFactory.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
