--- a/DbAccess/packages.config
+++ b/DbAccess/packages.config
@@ -1,4 +1,4 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="NDatabase" version="3.8.0" targetFramework="net452" />
+  <package id="sqlite-net" version="1.0.8" targetFramework="net452" />
 </packages>
