--- a/ServeurSide/ServeurSide.csproj
+++ b/ServeurSide/ServeurSide.csproj
@@ -188,13 +188,10 @@
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\MusicListingController.cs" />
     <Compile Include="Controllers\ValuesController.cs" />
-    <Compile Include="DTO\Music.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Services\IMusicService.cs" />
-    <Compile Include="Services\MusicService.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Areas\HelpPage\HelpPage.css" />
@@ -264,6 +261,12 @@
   <ItemGroup>
     <TypeScriptCompile Include="Scripts\app.ts" />
     <TypeScriptCompile Include="Scripts\Aurora.d.ts" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\DbAccess\DbAccess.csproj">
+      <Project>{d6cd176d-d99b-4542-9d6b-fa4b0f96cb31}</Project>
+      <Name>DbAccess</Name>
+    </ProjectReference>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
