--- a/ServeurSide/ServeurSide.csproj
+++ b/ServeurSide/ServeurSide.csproj
@@ -259,9 +259,31 @@
     <Service Include="{4A0DDDB5-7A95-4FBF-97CC-616D07737A77}" />
   </ItemGroup>
   <ItemGroup>
-    <TypeScriptCompile Include="app.ts" />
     <TypeScriptCompile Include="Scripts\app.ts" />
     <TypeScriptCompile Include="Scripts\Aurora.d.ts" />
+    <TypeScriptCompile Include="Scripts\typings\angular2\angular2.d.ts" />
+    <TypeScriptCompile Include="Scripts\typings\angular2\router.d.ts" />
+    <TypeScriptCompile Include="Scripts\typings\es6-promise\es6-promise.d.ts" />
+    <TypeScriptCompile Include="Scripts\typings\jquery\jquery.d.ts" />
+    <TypeScriptCompile Include="Scripts\typings\rx\rx-lite.d.ts" />
+    <TypeScriptCompile Include="Scripts\typings\rx\rx.aggregates.d.ts" />
+    <TypeScriptCompile Include="Scripts\typings\rx\rx.all.d.ts" />
+    <TypeScriptCompile Include="Scripts\typings\rx\rx.async-lite.d.ts" />
+    <TypeScriptCompile Include="Scripts\typings\rx\rx.async.d.ts" />
+    <TypeScriptCompile Include="Scripts\typings\rx\rx.backpressure-lite.d.ts" />
+    <TypeScriptCompile Include="Scripts\typings\rx\rx.backpressure.d.ts" />
+    <TypeScriptCompile Include="Scripts\typings\rx\rx.binding-lite.d.ts" />
+    <TypeScriptCompile Include="Scripts\typings\rx\rx.binding.d.ts" />
+    <TypeScriptCompile Include="Scripts\typings\rx\rx.coincidence-lite.d.ts" />
+    <TypeScriptCompile Include="Scripts\typings\rx\rx.coincidence.d.ts" />
+    <TypeScriptCompile Include="Scripts\typings\rx\rx.d.ts" />
+    <TypeScriptCompile Include="Scripts\typings\rx\rx.experimental.d.ts" />
+    <TypeScriptCompile Include="Scripts\typings\rx\rx.joinpatterns.d.ts" />
+    <TypeScriptCompile Include="Scripts\typings\rx\rx.lite.d.ts" />
+    <TypeScriptCompile Include="Scripts\typings\rx\rx.testing.d.ts" />
+    <TypeScriptCompile Include="Scripts\typings\rx\rx.time-lite.d.ts" />
+    <TypeScriptCompile Include="Scripts\typings\rx\rx.time.d.ts" />
+    <TypeScriptCompile Include="Scripts\typings\rx\rx.virtualtime.d.ts" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\DbAccess\DbAccess.csproj">
@@ -285,7 +307,7 @@
     <TypeScriptGeneratesDeclarations>False</TypeScriptGeneratesDeclarations>
     <TypeScriptNoEmitOnError>True</TypeScriptNoEmitOnError>
     <TypeScriptSourceMap>True</TypeScriptSourceMap>
-    <TypeScriptExperimentalDecorators>true</TypeScriptExperimentalDecorators>
+    <TypeScriptExperimentalDecorators>True</TypeScriptExperimentalDecorators>
     <TypeScriptMapRoot />
     <TypeScriptSourceRoot />
   </PropertyGroup>
